--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 
 		<link rel="stylesheet" href="css/reset.css"/>
 		<link rel="stylesheet" href="css/global.css"/>
+		<!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 	</head>
 	<body>
 		<header>
@@ -22,7 +24,9 @@
 				</div>
 			</div>
 		</header>
-		<aside>
+
+
+		<div class="container-fluid">
 			<h3>Browse</h3>
 			<nav class="browse">
 				<ul class="main">
@@ -39,7 +43,9 @@
 					<li><a class="history" href="#">History</a></li>
 				</ul>
 			</nav>
-		</aside>
+		</div>
+
+
 
 		<main>
 			<header>
