essai grille bootstrap

--- a/index.html
+++ b/index.html
@@ -26,7 +26,18 @@
 		</header>
 
 
-		<div class="container-fluid">
+
+
+
+
+
+
+
+
+	<div class="container">
+		<div class="row">
+			<div class="col-sm">
+		<div class="container-md">
 			<h3>Browse</h3>
 			<nav class="browse">
 				<ul class="main">
@@ -44,8 +55,9 @@
 				</ul>
 			</nav>
 		</div>
+		
 
-
+		<div class="col-sm">
 
 		<main>
 			<header>
@@ -159,6 +171,11 @@
 					<div class="count">13 songs</div>
 				</article>
 			</section>
+		
 		</main>
+	</div>
+	</div>
+	</div>
+</div>
 	</body>
 </html>
