--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
 				</ul>
 			</nav>
 		</div>
+
+	</div>
 		
 
 		<div class="col-sm">
@@ -177,5 +179,6 @@
 	</div>
 	</div>
 </div>
+
 	</body>
 </html>
